# Bricksy_ACM_CAIS_Submission

./: .gitignore  README.md
agent/: README.md  agent.py  bricksy_backend.py
android-app/: README.md  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/example/bricksy/: MainActivity.kt  (+1 more)
android-app/app/src/main/res/drawable/: button_ghost.xml  button_primary.xml  button_secondary.xml  section_background.xml
android-app/app/src/main/res/layout/: activity_main.xml  activity_splash.xml
android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android-app/app/src/main/res/xml/: network_security_config.xml
android-app/gradle/: libs.versions.toml
android-app/gradle/wrapper/: gradle-wrapper.properties
car-dashboard-mcp/: .gitignore  MCP_TOOLS.md  README.md  app.yaml  backend.py  pyproject.toml  quick_test.sh  start_server.sh  test_api.py  test_mcp.py
car-dashboard-mcp/server/: __init__.py  api.py  main.py  mcp_tools.py  models.py  state.py
car-dashboard-mcp/static/: index.html  script.js  styles.css
servicehub-mcp/: .databrickignore  .gitignore  README.md  agent.py  app.yaml  pyproject.toml
servicehub-mcp/server/: app.py  database.py  db_init.py  main.py  mcp_tools.py  utils.py
servicehub-mcp/server/routers/: bookings.py  driver_profile.py  service_centers.py  slots.py
telemetry/: README.md  Synthetic_Telemetry_Producer.py  requirements_telemetry_server.txt  telemetry_server.py  zerobus_telemetry_resptapi.py  zerobus_vehicle_telemetry_ingest.py
(+5 files in other folders)
