[project]
name = "car-dashboard-mcp"
version = "1.0.0"
description = "Car Dashboard with Model Context Protocol integration for Databricks"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "pydantic>=2.11.7",
    "fastmcp>=3.0.0",
    "mcp[cli]>=1.14.0",
    "databricks-sdk>=0.60.0",
]

[project.scripts]
car-dashboard-mcp = "server.main:main"

[tool.hatch.build.targets.wheel]
packages = ["server"]
include = ["static"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
